# prox-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  config.example.toml
src/: api.rs  cli.rs  config.rs  main.rs  output.rs
src/cli/: agent.rs  apt.rs  backup.rs  bulk.rs  conf.rs  console.rs  ct.rs  disk.rs  domain.rs  firewall.rs  group.rs  hardware.rs  mod.rs  network.rs  node.rs  node_firewall.rs  pool.rs  scan.rs  storage.rs  syslog.rs  task.rs  template.rs  tfa.rs  user.rs  vm.rs
src/commands/: agent.rs  apt.rs  backup.rs  bulk.rs  console.rs  ct.rs  disk.rs  domain.rs  firewall.rs  group.rs  hardware.rs  mod.rs  network.rs  node.rs  node_firewall.rs  pool.rs  scan.rs  snap_all.rs  ssh.rs  status.rs  storage.rs  syslog.rs  task.rs  template.rs  tfa.rs  user.rs  vm.rs
